--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     volumes: 
       - .:/app
+      - .:/app/node_modules
     container_name: eve-chainkills
     networks:
       - default
